[package]
name = "tmq_app"
version = "0.3.0"
authors = ["youngday"]
edition = "2021"

[dependencies]
async-std = { version = "1.10", features = ["attributes","tokio1"]  }
log = "0.4"
log4rs = {version="1.0",features = ["toml","json_encoder"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tmq={version="0.3.0"}
futures="0.3"

